fix tabs dark mode issue

--- a/assets/sass/_components.scss
+++ b/assets/sass/_components.scss
@@ -34,3 +34,10 @@ iam-search .optional-text {
   display: none!important;
 }
 
+// tabs
+
+@media screen and (prefers-color-scheme: dark) {
+  .tabs {
+    --tabs-gradient: linear-gradient(90deg, rgba(38,38,38,0), rgba(38,38,38,1));
+  }
+}
