--- a/assets/sass/components/tabs.scss
+++ b/assets/sass/components/tabs.scss
@@ -16,7 +16,7 @@
       top: 0;
       bottom: 1px;
       width: 2.5rem;
-      background: linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,1));
+      background: var(--tabs-gradient, linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,1)));
       z-index: 1000;
       pointer-events: none;
     }
@@ -33,11 +33,6 @@
       clear: both;
     }
 
-    @media screen and (prefers-color-scheme: dark) {
-      &:before {
-        background: linear-gradient(90deg, rgba(38,38,38,0), rgba(38,38,38,1));
-      }
-    }
   }
 }
 
